Restructure Effect Path API chapter and book-level Quickstart for faster onboarding
Reorganises the hkj-book's most important on-ramp for new adopters so a Java
developer reaches runnable Effect Path code in under five minutes, with
advanced material available but no longer blocking the beginner path.

- Effect Path API chapter restructured into five sub-chapters: Quickstart,
  Core Paths, Optics Integration, Advanced Paths, Reference. Sub-chapter H1s
  aligned with SUMMARY.md labels; original titles preserved as italic
  bylines. Migration Cookbook moved to the front of Core Paths; advanced
  ForPath variants, Free monad types, effect handlers, contexts, and
  resilience moved to Advanced Paths; Focus-Effect integration and Capstone
  lifted into a new Optics Integration sub-chapter.

- Book-level Quickstart trimmed to lead with the recommended Gradle and
  Maven plugin setup (releases and snapshots). Full manual build-file
  configuration extracted to a new tooling/manual_setup.md page, with the
  Build Plugins page deduplicated to point there instead of duplicating
  content.

- New API-level Effect Path quickstart (effect/quickstart.md) with three
  runnable examples covering MaybePath, EitherPath, and ForPath, plus a
  pointer to the hands-on tutorial.

- Sub-chapter landings gained "In this section" admonishes previewing their
  pages and prerequisites. advanced_topics.md gained narrative-vs-reference
  pointers at the start of sections that overlap dedicated pages. Every
  Previous/Next footer updated to match the new linear order (~30 pages).

- Chapter intro's "See Example Code" admonition reorganised by sub-chapter
  and filled out with 14 previously unreferenced example files; the chapter
  now links its companion tutorial from both the intro and the quickstart.

- home.md "Documentation Guide" rewritten to match the new five-sub-chapter
  reading order; README.md Manual Setup section repointed at
  tooling/manual_setup.html where the manual build files a